<resources>
    <string name="app_name">Button</string>
    <string name="action_settings">Settings</string>
    <string name="Button1">显示文本1</string>
    <string name="Button2">显示文本2</string>
    <string name="ToggleBtnYes">哈哈哈哈</string>
    <string name="ToggleBtnNo">哼哼哼哼</string>
    <string name="RadioBtn1">男</string>
    <string name="RadioBtn2">女</string>
    <string name="Button3">提交</string>
    <string name="CheckBoxTitle">复选框</string>
    <string name="CheckBoxL1">体育</string>
    <string name="CheckBoxL2">音乐</string>
    <string name="CheckBoxL3">放屁</string>
</resources>
